--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Mon Mar 16 2020 23:08:52 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Mar 18 2020 15:28:19 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5e5ff499b66e5b7e766fdda3" data-wf-site="5e5ee26e3de02ae2e7803b30">
 <head>
   <meta charset="utf-8">
@@ -9,7 +9,7 @@
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/components.css" rel="stylesheet" type="text/css">
   <link href="css/agency-of-launch-fc2d4b60-e0a65ac1242fe.css" rel="stylesheet" type="text/css">
-  <style>@media (min-width:992px) {html.w-mod-js:not(.w-mod-ix) [data-w-id="40d34b45-b2f8-9dc0-9832-a7a5b69781ba"] {-webkit-transform:translate3d(0, 75PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 75PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 75PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 75PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0;}html.w-mod-js:not(.w-mod-ix) [data-w-id="29fc3797-6b7b-d50b-ac59-29037332e8ac"] {opacity:0;}html.w-mod-js:not(.w-mod-ix) [data-w-id="40d34b45-b2f8-9dc0-9832-a7a5b69781c4"] {opacity:0;-webkit-transform:translate3d(0, -75PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, -75PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, -75PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, -75PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);}html.w-mod-js:not(.w-mod-ix) [data-w-id="5c039fa7-a2a0-bdf7-a646-8391d387d940"] {opacity:0;-webkit-transform:translate3d(0, -75PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, -75PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, -75PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, -75PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);}}@media (max-width:991px) and (min-width:768px) {html.w-mod-js:not(.w-mod-ix) [data-w-id="40d34b45-b2f8-9dc0-9832-a7a5b69781ba"] {-webkit-transform:translate3d(0, 75PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 75PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 75PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 75PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0;}html.w-mod-js:not(.w-mod-ix) [data-w-id="29fc3797-6b7b-d50b-ac59-29037332e8ac"] {opacity:0;}html.w-mod-js:not(.w-mod-ix) [data-w-id="40d34b45-b2f8-9dc0-9832-a7a5b69781c4"] {opacity:0;-webkit-transform:translate3d(0, -75PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, -75PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, -75PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, -75PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);}html.w-mod-js:not(.w-mod-ix) [data-w-id="5c039fa7-a2a0-bdf7-a646-8391d387d940"] {opacity:0;-webkit-transform:translate3d(0, -75PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, -75PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, -75PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, -75PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);}}</style>
+  <style>@media (min-width:992px) {html.w-mod-js:not(.w-mod-ix) [data-w-id="41d12c0f-8503-2589-7619-a244836efec1"] {-webkit-transform:translate3d(0, 75PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 75PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 75PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 75PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0;}html.w-mod-js:not(.w-mod-ix) [data-w-id="29fc3797-6b7b-d50b-ac59-29037332e8ac"] {opacity:0;}html.w-mod-js:not(.w-mod-ix) [data-w-id="40d34b45-b2f8-9dc0-9832-a7a5b69781c4"] {opacity:0;-webkit-transform:translate3d(0, -75PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, -75PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, -75PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, -75PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);}html.w-mod-js:not(.w-mod-ix) [data-w-id="5c039fa7-a2a0-bdf7-a646-8391d387d940"] {opacity:0;-webkit-transform:translate3d(0, -75PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, -75PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, -75PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, -75PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);}}@media (max-width:991px) and (min-width:768px) {html.w-mod-js:not(.w-mod-ix) [data-w-id="41d12c0f-8503-2589-7619-a244836efec1"] {-webkit-transform:translate3d(0, 75PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 75PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 75PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 75PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0;}html.w-mod-js:not(.w-mod-ix) [data-w-id="29fc3797-6b7b-d50b-ac59-29037332e8ac"] {opacity:0;}html.w-mod-js:not(.w-mod-ix) [data-w-id="40d34b45-b2f8-9dc0-9832-a7a5b69781c4"] {opacity:0;-webkit-transform:translate3d(0, -75PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, -75PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, -75PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, -75PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);}html.w-mod-js:not(.w-mod-ix) [data-w-id="5c039fa7-a2a0-bdf7-a646-8391d387d940"] {opacity:0;-webkit-transform:translate3d(0, -75PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, -75PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, -75PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, -75PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);}}</style>
   <script src="https://use.typekit.net/rtj6yhp.js" type="text/javascript"></script>
   <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
@@ -65,12 +65,20 @@ display: none !important;
       <div class="circle---red"></div>
     </div>
   </div>
-  <div class="div-block-67"></div>
+  <div data-w-id="8cc9fb9d-0c41-71de-1dc9-f1025f492eb1" class="div-block-67"></div>
   <div class="div-block-62">
     <div class="introduction two">
+      <div class="w-layout-grid grid-4 tetris">
+        <div id="w-node-a7a5b69781b9-766fdda3" class="pane"></div>
+        <div class="pane">
+          <div data-w-id="40d34b45-b2f8-9dc0-9832-a7a5b69781c4" class="description-2-2">
+            <div id="game" class="div-block-72"></div>
+          </div>
+        </div>
+      </div>
       <div class="w-layout-grid grid-4">
-        <div id="w-node-a7a5b69781b9-766fdda3" class="pane">
-          <div data-w-id="40d34b45-b2f8-9dc0-9832-a7a5b69781ba" class="animation block one">
+        <div id="w-node-a244836efec0-766fdda3" class="pane">
+          <div data-w-id="41d12c0f-8503-2589-7619-a244836efec1" class="animation block one">
             <p class="paragraph-3"><strong>Faster, better.</strong><br><br>Our innovative approach allows us to solve any problem across brand and product, arriving at a solution to put in front of your users in as little as a week.</p><a href="#" class="button-3 request-call w-button">Request a call</a></div>
           <div class="animation block two">
             <p class="paragraph-3"><strong>Brand</strong><br><br>Iconic branding comes from winning strategy and execution. To get there, we work with you to at the early stage to define brand values and direction, or with an existing brand to uncover what is unique to your experience and how it can resonate within culture.</p>
@@ -92,7 +100,7 @@ display: none !important;
           </div>
         </div>
         <div class="pane">
-          <div data-w-id="40d34b45-b2f8-9dc0-9832-a7a5b69781c4" class="description-2-2"><img src="images/implement-scorecards.png" id="desktop-header" alt="" class="image-7"><img src="images/implement-scorecards.png" id="mobile-header" alt="" class="image-3"></div>
+          <div class="description-2-2"><img src="images/implement-scorecards.png" id="desktop-header" alt="" class="image-7"><img src="images/implement-scorecards.png" id="mobile-header" alt="" class="image-3"></div>
         </div>
       </div>
       <div data-w-id="5c039fa7-a2a0-bdf7-a646-8391d387d940" class="bar"><img src="images/arrow.svg" alt="" class="image-2">
@@ -336,5 +344,80 @@ display: none !important;
   <!--  Calendly link widget begin  -->
   <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
   <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript"></script>
+  <script src="https://www.of.agency/blockrain.jquery.min.js" type="text/javascript"></script>
+  <script>
+$game = $('#game');
+$game.height($(window).height());
+$game.blockrain({
+	onGameOver: function(score){$game.blockrain('restart')},
+	'showFieldOnStart': true,
+  controls: true,
+  speed: 30
+});
+$game.blockrain('theme', {
+  background: '',
+  backgroundGrid: '',
+  complexBlocks: {
+    line:     ['https://www.of.agency/assets/blocks/custom/line.svg', 'https://www.of.agency/assets/blocks/custom/line.svg'],
+    square:   'https://www.of.agency/assets/blocks/custom/square.svg',
+    arrow:    'https://www.of.agency/assets/blocks/custom/arrow.svg',
+    rightHook:'https://www.of.agency/assets/blocks/custom/rightHook.svg',
+    leftHook: 'https://www.of.agency/assets/blocks/custom/leftHook.svg',
+    rightZag: 'https://www.of.agency/assets/blocks/custom/rightZag.svg',
+    leftZag:  'https://www.of.agency/assets/blocks/custom/leftZag.svg'
+  }
+});
+$game.blockrain('start');
+function resizeCanvas(){
+let canvas = $('.blockrain-game-holder canvas')[0];
+let context = canvas.getContext("2d");
+// get current size of the canvas
+let rect = canvas.getBoundingClientRect();
+console.log(rect)
+// increase the actual size of our canvas
+canvas.width = rect.width * devicePixelRatio;
+canvas.height = rect.height * devicePixelRatio - 1;
+// ensure all drawing operations are scaled
+context.scale(devicePixelRatio, devicePixelRatio);
+// scale everything down using CSS
+canvas.style.width = rect.width + 'px';
+canvas.style.height = rect.height + 'px';
+}
+resizeCanvas();
+let canvas = $('.blockrain-game-holder canvas')[0];
+let context = canvas.getContext("2d");
+// get current size of the canvas
+let rect = canvas.getBoundingClientRect();
+console.log(rect)
+// increase the actual size of our canvas
+canvas.width = rect.width * devicePixelRatio;
+canvas.height = rect.height * devicePixelRatio - 100;
+// ensure all drawing operations are scaled
+context.scale(devicePixelRatio, devicePixelRatio);
+// scale everything down using CSS
+canvas.style.width = rect.width + 'px';
+canvas.style.height = rect.height + 'px';
+$(window).resize(function(){ 
+$game.height($(window).height()); resizeCanvas(); 
+let canvas = $('.blockrain-game-holder canvas')[0];
+let context = canvas.getContext("2d");
+// get current size of the canvas
+let rect = canvas.getBoundingClientRect();
+console.log(rect)
+// increase the actual size of our canvas
+canvas.width = rect.width * devicePixelRatio;
+canvas.height = rect.height * devicePixelRatio - 100;
+// ensure all drawing operations are scaled
+context.scale(devicePixelRatio, devicePixelRatio);
+// scale everything down using CSS
+canvas.style.width = rect.width + 'px';
+canvas.style.height = rect.height + 'px';
+})
+</script>
+  <style>
+.blockrain-game-over-holder, .blockrain-start-holder, .blockrain-score-holder {}
+display: none;
+}
+</style>
 </body>
 </html>
