--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<!--  Last Published: Wed Mar 18 2020 18:06:46 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="5e5ff499b66e5b7e766fdda3" data-wf-site="5e5ee26e3de02ae2e7803b30">
+<!--  Last Published: Thu Mar 19 2020 21:50:59 GMT+0000 (Coordinated Universal Time)  -->
+<html data-wf-page="5e738b0bf0a7111454b047ad" data-wf-site="5e738b0bf0a711429fb047ac">
 <head>
   <meta charset="utf-8">
   <title>Home</title>
@@ -8,7 +8,7 @@
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/components.css" rel="stylesheet" type="text/css">
-  <link href="css/agency-of-launch-fc2d4b60-e0a65ac1242fe.css" rel="stylesheet" type="text/css">
+  <link href="css/agency-of-launch-fc2d4b60-28e270807b0fc.css" rel="stylesheet" type="text/css">
   <style>@media (min-width:992px) {html.w-mod-js:not(.w-mod-ix) [data-w-id="41d12c0f-8503-2589-7619-a244836efec1"] {-webkit-transform:translate3d(0, 75PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 75PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 75PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 75PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0;}html.w-mod-js:not(.w-mod-ix) [data-w-id="29fc3797-6b7b-d50b-ac59-29037332e8ac"] {opacity:0;}html.w-mod-js:not(.w-mod-ix) [data-w-id="40d34b45-b2f8-9dc0-9832-a7a5b69781c4"] {opacity:0;-webkit-transform:translate3d(0, -75PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, -75PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, -75PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, -75PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);}html.w-mod-js:not(.w-mod-ix) [data-w-id="5c039fa7-a2a0-bdf7-a646-8391d387d940"] {opacity:0;-webkit-transform:translate3d(0, -75PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, -75PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, -75PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, -75PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);}}@media (max-width:991px) and (min-width:768px) {html.w-mod-js:not(.w-mod-ix) [data-w-id="41d12c0f-8503-2589-7619-a244836efec1"] {-webkit-transform:translate3d(0, 75PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 75PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 75PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 75PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0;}html.w-mod-js:not(.w-mod-ix) [data-w-id="29fc3797-6b7b-d50b-ac59-29037332e8ac"] {opacity:0;}html.w-mod-js:not(.w-mod-ix) [data-w-id="40d34b45-b2f8-9dc0-9832-a7a5b69781c4"] {opacity:0;-webkit-transform:translate3d(0, -75PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, -75PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, -75PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, -75PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);}html.w-mod-js:not(.w-mod-ix) [data-w-id="5c039fa7-a2a0-bdf7-a646-8391d387d940"] {opacity:0;-webkit-transform:translate3d(0, -75PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, -75PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, -75PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, -75PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);}}</style>
   <script src="https://use.typekit.net/rtj6yhp.js" type="text/javascript"></script>
   <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
@@ -81,7 +81,7 @@ visibility: hidden;
   <div class="div-block-62">
     <div class="introduction two">
       <div class="w-layout-grid grid-4 tetris">
-        <div id="w-node-a7a5b69781b9-766fdda3" class="pane"></div>
+        <div id="w-node-a7a5b69781b9-54b047ad" class="pane"></div>
         <div class="pane">
           <div data-w-id="40d34b45-b2f8-9dc0-9832-a7a5b69781c4" class="description-2-2">
             <div id="game" class="div-block-72"></div>
@@ -89,7 +89,7 @@ visibility: hidden;
         </div>
       </div>
       <div class="w-layout-grid grid-4">
-        <div id="w-node-a244836efec0-766fdda3" class="pane">
+        <div id="w-node-a244836efec0-54b047ad" class="pane">
           <div data-w-id="41d12c0f-8503-2589-7619-a244836efec1" class="animation block one">
             <p class="paragraph-3"><strong>Faster, better.</strong><br><br>Our innovative approach allows us to solve any problem across brand and product, arriving at a solution to put in front of your users in as little as a week.</p><a href="#" class="button-3 request-call w-button">Request a call</a></div>
           <div class="animation block two">
@@ -122,7 +122,7 @@ visibility: hidden;
     <div class="brand">
       <div class="content">
         <div class="w-layout-grid grid">
-          <div id="w-node-80955faca615-766fdda3" class="pane">
+          <div id="w-node-80955faca615-54b047ad" class="pane">
             <div class="animation block">
               <p class="paragraph-3"><strong>Brand</strong><br><br>Iconic branding comes from winning strategy and execution. To get there, we work with you to at the early stage to define brand values and direction, or with an existing brand to uncover what is unique to your experience and how it can resonate within culture.</p>
               <div class="w-row">
@@ -146,7 +146,7 @@ visibility: hidden;
     <div class="product">
       <div class="content">
         <div class="w-layout-grid grid">
-          <div id="w-node-21439d3b05e7-766fdda3" class="pane">
+          <div id="w-node-21439d3b05e7-54b047ad" class="pane">
             <div class="animation block">
               <p class="paragraph-3"><strong>Product</strong><br><br>We offer support at every stage in the process. Get quick industry and audience research, done together, to understand your problem and its users. Design a prototype or build out a full experience in weeks. See our options for quickly growing a new or existing experience.</p>
               <div class="w-row">
@@ -170,7 +170,7 @@ visibility: hidden;
     <div class="contact">
       <div class="content">
         <div class="w-layout-grid grid schedule">
-          <div id="w-node-79b4e9a20eb2-766fdda3" class="pane">
+          <div id="w-node-79b4e9a20eb2-54b047ad" class="pane">
             <div class="animation block schedule">
               <div>
                 <p class="paragraph-3 schedule"><strong>Get our free guide</strong><br>See how we helped Riviera Partners ship products faster and more effectively.</p>
@@ -212,7 +212,7 @@ visibility: hidden;
     <div data-scroll="in" class="scroll-change">
       <div class="content change">
         <div class="w-layout-grid grid">
-          <div id="w-node-3aa6dbedfc8e-766fdda3" class="pane">
+          <div id="w-node-3aa6dbedfc8e-54b047ad" class="pane">
             <div class="animation block change">
               <p class="paragraph-3"><strong>Product</strong><br><br>We offer support at every stage in the process. Get quick industry and audience research, done together, to understand your problem and its users. Design a prototype or build out a full experience in weeks. See our options for quickly growing a new or existing experience.</p>
               <div class="w-row">
@@ -223,7 +223,7 @@ visibility: hidden;
               </div>
             </div>
           </div>
-          <div id="w-node-3aa6dbedfca1-766fdda3" class="pane">
+          <div id="w-node-3aa6dbedfca1-54b047ad" class="pane">
             <div class="description-2 change"></div>
           </div>
         </div>
@@ -232,7 +232,7 @@ visibility: hidden;
     <div data-scroll="in" class="scroll-change this">
       <div class="content change">
         <div class="w-layout-grid grid">
-          <div id="w-node-161f8756e95b-766fdda3" class="pane">
+          <div id="w-node-161f8756e95b-54b047ad" class="pane">
             <div class="animation block change">
               <p class="paragraph-3"><strong>Product</strong><br><br>We offer support at every stage in the process. Get quick industry and audience research, done together, to understand your problem and its users. Design a prototype or build out a full experience in weeks. See our options for quickly growing a new or existing experience.</p>
               <div class="w-row">
@@ -243,7 +243,7 @@ visibility: hidden;
               </div>
             </div>
           </div>
-          <div id="w-node-161f8756e96e-766fdda3" class="pane">
+          <div id="w-node-161f8756e96e-54b047ad" class="pane">
             <div class="description-2 change two">
               <div class="phone"><img src="images/brand.png" alt=""></div>
             </div>
@@ -254,7 +254,7 @@ visibility: hidden;
     <div data-scroll="out" class="scroll-change">
       <div class="content change">
         <div class="w-layout-grid grid">
-          <div id="w-node-7079a26e9006-766fdda3" class="pane">
+          <div id="w-node-7079a26e9006-54b047ad" class="pane">
             <div class="animation block change">
               <p class="paragraph-3"><strong>Product</strong><br><br>We offer support at every stage in the process. Get quick industry and audience research, done together, to understand your problem and its users. Design a prototype or build out a full experience in weeks. See our options for quickly growing a new or existing experience.</p>
               <div class="w-row">
@@ -265,7 +265,7 @@ visibility: hidden;
               </div>
             </div>
           </div>
-          <div id="w-node-7079a26e9019-766fdda3" class="pane">
+          <div id="w-node-7079a26e9019-54b047ad" class="pane">
             <div class="description-2 change three">
               <div class="phone"><img src="images/phone-product.png" alt=""></div>
             </div>
@@ -277,7 +277,7 @@ visibility: hidden;
       <div data-scroll="out" class="scroll-change last">
         <div class="content change">
           <div class="w-layout-grid grid">
-            <div id="w-node-e6c1bd88c6db-766fdda3" class="pane mobile">
+            <div id="w-node-e6c1bd88c6db-54b047ad" class="pane mobile">
               <div class="animation block change">
                 <p class="paragraph-3"><strong>Product</strong><br><br>We offer support at every stage in the process. Get quick industry and audience research, done together, to understand your problem and its users. Design a prototype or build out a full experience in weeks. See our options for quickly growing a new or existing experience.</p>
                 <div class="w-row">
@@ -288,7 +288,7 @@ visibility: hidden;
                 </div>
               </div>
             </div>
-            <div id="w-node-e6c1bd88c6ee-766fdda3" class="pane">
+            <div id="w-node-e6c1bd88c6ee-54b047ad" class="pane">
               <div class="description-2 change four"></div>
             </div>
           </div>
@@ -300,12 +300,12 @@ visibility: hidden;
     <div class="bottom"></div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.4.1.min.220afd743d.js" type="text/javascript" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-  <script src="js/agency-of-launch-fc2d4b60-e0a65ac1242fe.js" type="text/javascript"></script>
+  <script src="js/agency-of-launch-fc2d4b60-28e270807b0fc.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
   <script src="https://unpkg.com/scroll-out/dist/scroll-out.min.js"></script>
   <script>
 $('.request-call').click(function(){
-Calendly.initPopupWidget({url: 'https://calendly.com/agencyof/consultation?primary_color=9d9d9d'});
+Calendly.initPopupWidget({url: 'https://calendly.com/agencyof/consultation'});
 return false;
 })
 function throttle(fn, wait) {
